--- a/Css/shared/site.css
+++ b/Css/shared/site.css
@@ -8,7 +8,7 @@ body{
     float: left
 }
 
-.btn{padding:10px 15px;border-radius: 25px;}
+.btn{padding:10px 15px;border-radius: 25px;cursor:pointer}
 
 .col-1{width: 8.33%}.col-2{width: 16.66%}.col-3{width: 25%}.col-4{width: 33.33%}
 .col-5{width: 41.66%}.col-6{width: 50%}.col-7{width: 58.33%}.col-8{width:66.66%}
