--- a/Css/cbt.css
+++ b/Css/cbt.css
@@ -67,9 +67,10 @@
     height: 250px;
     border: 1px solid #d9d9d9;
     overflow-y: scroll;
+    padding: 15px;
 }
 #questionsButton{
-    border-top: 1px solid #f2f2f2
+    border-top: 1px solid #f2f2f2;padding-top: 8px;
 }
 .content > div:first-child > div{padding: 0px 10px 10px}
 .content > div:first-child > div > div{
@@ -78,3 +79,7 @@
 .content > div:first-child > div img{
     width: 150px;border: 1px solid #f2f2f2;
 }
+.qbtn{padding: 10px;border-radius: 5px; border-width: 0px;margin: 3px;cursor:pointer;outline:none}
+.answered{color:#fff; background-color: #428bca;}
+#optionDiv{padding: 10px;}
+#optionDiv  input{display: inline-block;margin-bottom: 15px;}
