Button highlighter added

--- a/Css/cbt.css
+++ b/Css/cbt.css
@@ -83,3 +83,4 @@
 .answered{color:#fff; background-color: #428bca;}
 #optionDiv{padding: 10px;}
 #optionDiv  input{display: inline-block;margin-bottom: 15px;}
+.blueHightlight{background-color: #428bca;color:#fff;}
